--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@react-three/cannon": "^3.1.2",
     "@react-three/drei": "^7.12.3",
     "@react-three/fiber": "^7.0.7",
+    "@react-three/xr": "^3.2.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^5.1.1",
+    "material-ui-color-picker": "^3.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^2.0.0-rc.0",
+    "react-color": "^2.19.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
